@@ -1,3 +1,7 @@
+2006-Nov-30  Heikki Junnila <hjunnila@users.sf.net>
+	* Added m_toolbar->setMovingEnabled(false) to all toolbars to prevent
+	  them from being dragged all over the place.
+
 2006-Nov-28  Heikki Junnila <hjunnila@users.sf.net>
 	* Fixed a bug in pluginmanager.cpp that tried to give an integer
 	  to a function that actually takes a QString. Since newer QT versions
